feat: 🎸 major change

--- a/src/app/features/admin-management/product-components/view-products/view-products.component.html
+++ b/src/app/features/admin-management/product-components/view-products/view-products.component.html
@@ -9,7 +9,7 @@
             <mat-form-field class="mat-block" id="matFrmFieldUserStatus">
               <mat-select
                 id="matSelectUserStatus"
-                placeholder="Category"
+                placeholder="{{'admin.productform.category' | translate}}"
                 [(value)]="selectedStatus"
                 (selectionChange)="sortchanged(selectedStatus)"
               >
