--- a/src/app/features/admin-management/user-components/view-user-order/view-user-order.component.html
+++ b/src/app/features/admin-management/user-components/view-user-order/view-user-order.component.html
@@ -1,4 +1,5 @@
 <app-jumbotron [Heading]="'admin.main_heading.all_orders'"></app-jumbotron>
+<app-spinner [loading]="dataLoading" class="centre-spinner"></app-spinner>
 <div [ngClass]="{'order-container':true,'dark-order-container': ( property.nightmode | async)}">
   <mat-accordion>
     <ng-container *ngFor="let user of user">
@@ -17,7 +18,7 @@
               {{reset()}}
               <mat-expansion-panel-header>
                 <mat-panel-title>
-                  ORDER {{i+1}}
+                  {{'admin.table.order' | translate}} {{i+1}}
                 </mat-panel-title>
                 <mat-panel-description>
                   {{order[0].date}}
