--- a/src/app/features/cart-management/checkout/billing/billing.component.html
+++ b/src/app/features/cart-management/checkout/billing/billing.component.html
@@ -21,7 +21,8 @@
                   {{"user.form_validations.must_be_at_least_3_characters_long" | translate}}
                 </mat-error>
                 <mat-error *ngIf="hasError('nameFormControl','pattern')">
-                  Invalid input
+                                      {{"user.form_validations.invalid_input" |translate}}
+
                 </mat-error>
                 <mat-error *ngIf="hasError('nameFormControl','required')">
                   {{"user.form.name" | translate}} {{"user.form_validations.is_required" |
@@ -40,7 +41,8 @@
                   translate}}
                 </mat-error>
                 <mat-error *ngIf="hasError('LastnameFormControl','pattern')">
-                  Invalid input
+                                      {{"user.form_validations.invalid_input" |translate}}
+
                 </mat-error>
               </mat-form-field>
             </td>
@@ -135,7 +137,8 @@
                   | translate}}
                 </mat-error>
                 <mat-error *ngIf="hasError('PincodeFormControl','pattern')">
-                  Invalid input
+                                      {{"user.form_validations.invalid_input" |translate}}
+
                 </mat-error>
                 <mat-error *ngIf="hasError('PincodeFormControl','required')">
                   {{"user.form.pincode" | translate}} {{"user.form_validations.is_required" |
