--- a/src/app/features/cart-management/checkout/recipt/recipt.component.html
+++ b/src/app/features/cart-management/checkout/recipt/recipt.component.html
@@ -5,16 +5,16 @@
 >
   <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
-      <mat-card-title>Recipt</mat-card-title>
+      <mat-card-title>{{'user.form.recipt' | translate}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <br /><br />
       <div class="centre-button">
-        <h2>Thanks for your order!</h2>
+        <h2>{{'user.form.thankyou' | translate}}</h2>
       </div>
       <br />
       <div class="centre-button">
-        <b><h3>December 7,2019</h3></b>
+        <b><h3>{{todaydate | date}}</h3></b>
       </div>
       <div [ngClass]="{'table-wrapper':true, 'dark-table-wrapper' :( property.nightmode | async)}">
         <mat-table [dataSource]="dataSource">
@@ -57,13 +57,13 @@
       <br /><br />
       <div fxLayout="row" fxLayoutAlign="start">
         <div fxFlex="50%" class="billing-section">
-          <h3>Billed To</h3>
+          <h3>{{'user.form.billed_to' | translate}}</h3>
           <p>{{data?.country}}</p>
           <p>{{data?.state}}</p>
           <p>{{data?.address}}</p>
         </div>
         <div fxFlex="50%" class="billing-section">
-          <h3>Total Amount :- {{totalprice}}</h3>
+          <h3>{{'user.form.total_amt' | translate}} :- {{totalprice}}</h3>
         </div>
       </div>
     </mat-card-content>
@@ -74,10 +74,10 @@
   [ngClass]="{'bottom-action-bar': true,'dark-bottom-action-bar' :( property.nightmode | async),'centre-button':true}"
 >
   <button mat-raised-button class="green-btn" (click)="downloadImage()">
-    Download Recipt As Image
+    {{'user.form.Download_Recipt_As_Image' | translate}}
   </button>
   &nbsp;&nbsp;
   <button mat-raised-button class="green-btn" (click)="downloadPdf()">
-    Download Recipt As Pdf
+    {{'user.form.Download_Recipt_As_Pdf' | translate}}
   </button>
 </mat-toolbar>
