--- a/src/app/features/user-management/forgot-password/forgot-password.component.html
+++ b/src/app/features/user-management/forgot-password/forgot-password.component.html
@@ -2,7 +2,7 @@
   <app-spinner [loading]="dataLoading" class="centre-spinner"></app-spinner>
   <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
-      <mat-card-title>Forgot Password</mat-card-title>
+      <mat-card-title>{{"user.form.forgot_password" | translate}}</mat-card-title>
     </mat-card-header>
     <br />
     <form
@@ -53,11 +53,11 @@
         (click)="send()"
         (keyup.enter)="send()"
       >
-        SEND
+        {{"user.form.send" | translate}}
       </button>
     </div>
     <div class="input-text" style="margin-top: 0px;">
-      <a [routerLink]="['/login']"> Go To Login Page </a>
+      <a [routerLink]="['/login']">{{"user.form.go_to_login" | translate}} </a>
     </div>
   </mat-card>
 </div>
