--- a/src/app/features/admin-management/user-components/view-users/view-users.component.html
+++ b/src/app/features/admin-management/user-components/view-users/view-users.component.html
@@ -1,5 +1,5 @@
 <app-jumbotron [Heading]="'admin.main_heading.all_users'"></app-jumbotron>
-<app-spinner [loading]="dataLoading" class="centree-spinner"></app-spinner>
+<app-spinner [loading]="dataLoading" class="centre-spinner"></app-spinner>
 <div [ngClass]="{'outer-wrap': true , 'dark-outer-wrap' :( property.nightmode | async)}">
   <mat-card class="display-products-card">
     <mat-card-content>
