--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
@@ -71,7 +71,8 @@
               {{"user.form.username" | translate}} must be at least 3 characters long.
             </mat-error>
             <mat-error *ngIf="hasError('usernameFormControl','pattern')">
-              Invalid input
+                                  {{"user.form_validations.invalid_input" |translate}}
+
             </mat-error>
             <mat-error *ngIf="hasError('usernameFormControl','required')">
               {{"user.form.username" | translate}} {{"user.form_validations.is_required" |
