--- a/src/app/shared/image-viewer/image-viewer.component.html
+++ b/src/app/shared/image-viewer/image-viewer.component.html
@@ -7,7 +7,7 @@
       <div class="profile-image">
         <ng-container *ngFor="let image of product index as i">
           <ng-container *ngIf="getnumber(i)">
-            <img src="{{image.imageurl}}">
+            <img src="{{image.imageurl}}" />
             <!-- <ngx-image-zoom
               [thumbImage]="image.imageurl"
               [magnification]="1.5"
